Add simple item of Gold Mushroom

--- a/src/main/resources/assets/mushroom-industry/lang/en_us.json
+++ b/src/main/resources/assets/mushroom-industry/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "itemGroup.mushroom-industry.mushrooms": "Mushrooms Group"
+  "itemGroup.mushroom-industry.mushrooms": "Mushrooms Group",
+
+  "item.mushroom-industry.gold_mushroom": "Gold Mushroom"
 }
