--- a/src/main/resources/assets/mushroom-industry/lang/ru_ru.json
+++ b/src/main/resources/assets/mushroom-industry/lang/ru_ru.json
@@ -1,3 +1,5 @@
 {
-  "itemGroup.mushroom-industry.mushrooms": "Разновидности грибов"
+  "itemGroup.mushroom-industry.mushrooms": "Разновидности грибов",
+
+  "item.mushroom-industry.gold_mushroom": "Золотой гриб"
 }
